Aqui se actualizan la parte de las transferencias junto con un login improvisado

--- a/app/views/app-vistaAlmacen.html
+++ b/app/views/app-vistaAlmacen.html
@@ -28,7 +28,7 @@
                         </thead>
                         <tbody >
                             <tr ng-repeat="var in almacenes.variant_warehouses">
-                                <td><a ng-click="varProdAl(var.variant.product_id)">{{ var.variant.description }}</a></td>
+                                <td><a ng-click="varProdAl(var.variant.product_id)">{{ var.variant.prodName }}</a></td>
                                 <td> {{var.variant.name}} </td>
                                 <td> {{var.variant.brand}} </td>
                                 <td> {{var.stock}} </td>
