--- a/app/views/app-nuevaTransferencia.html
+++ b/app/views/app-nuevaTransferencia.html
@@ -1,18 +1,11 @@
 <style type="text/css">
-    table, th, td {
-    border: 1px solid black;
-    border-collapse: collapse;
-}
-th, td {
-    padding: 15px;
-}
 .borde-input
 {
   border-style: solid;
 }
 .top-buffer { margin-top:20px; }
     </style>
-<div ng-controller="EditCtrlProductos">
+<div ng-controller="CtrlTransferencias">
   <ol class="breadcrumb">
       <li class=""><a href="#/">Home</a></li>
       <li class=""><a href="#/">Dashboard</a></li>
@@ -29,48 +22,97 @@ th, td {
     </div>
   </div>
   <div class="container-fluid">
-    <form name="productForm" ng-submit="sub(productN)">
-      <div class="tab-pane">
+    <form name="productForm" ng-submit="submitOrd()">
         <div class="row ">
-          <div class="col-md-6 borde-input">
-            <div class="title"><h3>Datos Iniciales</h3></div>
-            
+          <div class="col-md-8 col-md-offset-2 borde-input">
+            <div class="title"><h3>&Oacute;rden de transferencia</h3></div>
               <div class="form-group">
-                <label for="productBrand" class="control-label">Marca:</label>
-                <select name="productBrand" id="productBrand" class="form-control" ng-model="productN.brand_id">
-
-                  <option ng-repeat="option in brands" value="{{option.id}}">{{option.name}}</option>
+                <label for="transfType" class="control-label">Seleccione el tipo de transferencia</label>
+                <select name="transfType" id="transfType" class="form-control" ng-model="transfType">
+                  <option value="">Selecciona el tipo de transferencia</option>
+                  <option value="1">Almac&eacute;n a almac&eacute;n</option>
+                  <option value="2">Locaci&oacute;n a Locaci&oacute;n</option>
                 </select>
               </div>
               <div class="form-group">
-                <label for="productSupp">Proveedor:</label>
-                <select id="productSupp" name="productSupp" class="form-control" ng-model="productN.supplier_id">
-                  <option ng-repeat="option in suppliers" value="{{option.id}}">{{option.name}}</option>
+                <label for="productSupp">Seleccione la Locaci&oacute;n:</label>
+                <select id="productSupp" name="productSupp" class="form-control" ng-change="almacenesOrigen()" ng-model="LocOrigen">
+                  <option value="">Locaci&oacute;n Origen</option>
+                  <option ng-repeat="option in locations" value="{{option.id}}">{{option.name}}</option>
+                </select>
+              </div>
+              <div class="form-group">
+                <label for="productSupp">Seleccione el origen:</label>
+                <select id="productSupp" name="productSupp" class="form-control" ng-model="divOrigen" ng-change="prodDiv()">
+                  <option value="">Almacen / Divisor</option>
+                  <option ng-repeat="option in opciones_origen" value="{{option.id_div}}">{{option.name}}</option>
                 </select>
               </div>
             
           </div>
         </div>
-        <div class="row top-buffer ">
-          
-          <div class="col-md-6 borde-input">
-            <div class="title"><h3>Datos de producto</h3></div>
+        <div class="row top-buffer" ng-show="transfType==2">
+          <div class="col-md-8 col-md-offset-2 borde-input">
             <div class="form-group">
-              <label for="productName">Nombre:</label>
-              <input type="text" id="productName" name="productName" class="form-control" ng-model="productN.name"  required>
+              <label for="LocDestino">Seleccione la Locaci&oacute;n:</label>
+              <select id="LocDestino" name="LocDestino" class="form-control" ng-change="almacenesDestino()" ng-model="LocDestino">
+                <option ng-repeat="option in locations" value="{{option.id}}">{{option.name}}</option>
+              </select>
             </div>
             <div class="form-group">
-              <label for="productDesc">Descripci&oacute;n:</label>
-              <input id="productDesc" type="text" name="description" class="form-control" ng-model="productN.description" required />
+                <label for="productSupp">Seleccione el destino:</label>
+                <select id="productSupp" name="productSupp" class="form-control" ng-model="divDestinoOp2">
+                  <option ng-repeat="option in opciones_destino" value="{{option.id_div}}">{{option.name}}</option>
+                </select>
             </div>
+          </div>
+        </div>
+        <div class="row top-buffer" ng-show="transfType==1">
+          <div class="col-md-8 col-md-offset-2 borde-input">
+            <div class="form-group">
+                <label for="productSupp">Seleccione el destino:</label>
+                <select id="productSupp" name="productSupp" class="form-control" ng-model="divDestinoOp1">
+                  <option ng-repeat="option in opciones_origen" value="{{option.id_div}}">{{option.name}}</option>
+                </select>
+            </div>
+          </div>
+        </div>
+        <div class="row top-buffer">
+
+          <div class="col-md-offset-2 col-md-8 borde-input">
+            
+            <button data-ng-click="cloneItem()" type="button" class="btn inline">
+              Agregar criterio
+            </button>
+              <div class="row" ng-repeat="variant in variants">
+                <div class="col-md-5">
+                  <label for="productSupp">Productos:</label>
+                  <select id="productSupp" name="productSupp" class="form-control" ng-model="variant.id_var" ng-change="checkAb($index,variant.id_var)">
+                    <option ng-repeat="optionPT in ProdVarDiv.variant_divisions" value="{{optionPT.variant.id}}">{{optionPT.variant.prodName}} / {{optionPT.variant.name}}</option>
+                  </select>
+                </div>
+                <div class="col-md-2">
+                  <label for="productSupp">Disponibles:</label>
+                  <span>{{variant.max}}</span>
+                </div>
+                <div class="col-md-2">
+                  <label for="productSupp">Cantidad:</label>
+                  <input type="number" max="{{variant.max}}" class="form-control" ng-model="variant.amount" placeholder="cantidad">
+                </div>
+                <div class="col-md-2">
+                  <button data-ng-click="removeItem($index)" type="button" class="btn delete-field-{{$index}} ">
+                      Eliminar
+                  </button>
+                </div>
+              </div>
+                
           </div>
         </div>
         <div class="row">
-          <div class="col-sm-6">
-            <button class="btn-primary btn">Crear producto</button>
+          <div class="col-sm-3 col-md-offset-5">
+            <button class="btn-primary btn" ng-disabled="SubmitOnce">Crear orden</button>
           </div>
         </div>
-      </div>
     </form>
     </div>
 </div>
