Arreglos y problemas de compilacion

--- a/app/views/app-nuevaDivisa.html
+++ b/app/views/app-nuevaDivisa.html
@@ -1,7 +1,7 @@
 <div ng-controller="EditCtrlDivisas">
   <ol class="breadcrumb">
     <li class=""><a href="#/">Home</a></li>
-    <li class=""><a href="#/">Dashboard</a></li>
+    <li class=""><a href="#/app-vistaListas">Listas</a></li>
     <li class=""><a href="#/app-vistaDivisas">Divisas</a></li>
     <li class="active"><a href="#">Nueva</a></li>
   </ol>
