--- a/app/views/app-nuevaOrdenC.html
+++ b/app/views/app-nuevaOrdenC.html
@@ -16,9 +16,8 @@ hr{    border-top-color: #455A64}
 <div ng-controller="CtrlOrdenesCNueva">
   <ol class="breadcrumb">
       <li class=""><a href="#/">Home</a></li>
-      <li class=""><a href="#/">Dashboard</a></li>
-      <li class=""><a href="#/">Ordenes</a></li>
-      <li class=""><a href="#">Compra</a></li>
+      <li class=""><a href="#">Ordenes</a></li>
+      <li class=""><a href="#/app-vistaOrdenesCompra">Compra</a></li>
       <li class="active"><a href="#">Crear</a></li>
   </ol>
   <div class="page-heading">
