--- a/app/views/app-nuevoPrestamo.html
+++ b/app/views/app-nuevoPrestamo.html
@@ -8,9 +8,8 @@
 <div ng-controller="CtrlPrestamos">
   <ol class="breadcrumb">
       <li class=""><a href="#/">Home</a></li>
-      <li class=""><a href="#/">Dashboard</a></li>
-      <li class=""><a href="#/app-vistaProductos">Ordenes</a></li>
-      <li class=""><a href="#/app-vistaProductos">Prestamo</a></li>
+      <li class=""><a href="#">Ordenes</a></li>
+      <li class=""><a href="#/app-vistaPrestamos">Prestamo</a></li>
       <li class="active"><a href="#">Nuevo</a></li>
   </ol>
   <div class="page-heading">
