--- a/app/views/app-vistaClientes.html
+++ b/app/views/app-vistaClientes.html
@@ -1,16 +1,7 @@
-<style type="text/css">
-    table, th, td {
-    border: 1px solid black;
-    border-collapse: collapse;
-}
-th, td {
-    padding: 15px;
-}
-    </style>
+
 <div ng-controller="CtrlClientes">
 	<ol class="breadcrumb">
 	    <li class=""><a href="#/">Home</a></li>
-	    <li class=""><a href="#/">Dashboard</a></li>
 	    <li class="active"><a href="#">Clientes</a></li>
 	</ol>
 	<div class="page-heading">
@@ -22,12 +13,7 @@ th, td {
 		</div>
 	</div>
 	<div class="tab-content">
-      <table>
-          <col width="180">
-          <col width="280">
-          <col width="280">
-          <col width="280">
-          <col width="280">
+      <table class="table table-hover">
           <thead>
               <tr>
                 <th>Nombre</th> 
