--- a/app/views/app-vistaPrestamos.html
+++ b/app/views/app-vistaPrestamos.html
@@ -1,7 +1,7 @@
 <div ng-controller="CtrlPrestamos">
     <ol class="breadcrumb">
-        <li class=""><a href="index.html">Home</a></li>
-        <li class=""><a href="#">Dashboard</a></li>
+        <li class=""><a href="#/">Home</a></li>
+        
         <li class="active"><a href="#">Ordenes</a></li>
         <li class="active"><a href="#">Transferencia</a></li>
     </ol>
