--- a/app/views/app-vistaProductos.html
+++ b/app/views/app-vistaProductos.html
@@ -1,7 +1,6 @@
 <div ng-controller="EditCtrlProductos">
     <ol class="breadcrumb">
-        <li class=""><a href="index.html">Home</a></li>
-        <li class="active"><a href="index.html">Dashboard</a></li>
+        <li class=""><a href="#">Home</a></li>
     </ol>
     <div class="page-heading">            
         <h1>Productos</h1>
