--- a/app/views/app-vistaLoanInd.html
+++ b/app/views/app-vistaLoanInd.html
@@ -16,9 +16,9 @@ hr{    border-top-color: #455A64}
 <div ng-controller="CtrlLoansInd">
   <ol class="breadcrumb">
       <li class=""><a href="#/">Home</a></li>
-      <li class=""><a href="#/">Orden</a></li>
-      <li class=""><a href="#">Prestamo</a></li>
-      <li class="active"><a href="#">{{LoanInd.number}}</a></li>
+      <li class=""><a href="#">Orden</a></li>
+      <li class=""><a href="#/app-vistaPrestamos">Prestamos</a></li>
+      <li class="active"><a href="#">Prestamo :{{LoanInd.number}}</a></li>
   </ol>
   <div class="page-heading">
     <h1>&Oacute;rden de prestamo {{LoanInd.number}}</h1>
