--- a/app/views/app-vistaLocacion.html
+++ b/app/views/app-vistaLocacion.html
@@ -1,8 +1,7 @@
 <div ng-controller="CtrlLocacion">
     <ol class="breadcrumb">
-        <li class=""><a href="index.html">Home</a></li>
-        <li class=""><a href="#">Dashboard</a></li>
-        <li class="active"><a href="#">Prtoductos Global</a></li>
+        <li class=""><a href="#/">Home</a></li>
+        <li class="active"><a href="#">Productos Global</a></li>
     </ol>
     
     <div class="page-heading">            
