--- a/app/views/app-vistaPrestamos.html
+++ b/app/views/app-vistaPrestamos.html
@@ -1,12 +1,11 @@
 <div ng-controller="CtrlPrestamos">
     <ol class="breadcrumb">
         <li class=""><a href="#/">Home</a></li>
-        
         <li class="active"><a href="#">Ordenes</a></li>
-        <li class="active"><a href="#">Transferencia</a></li>
+        <li class="active"><a href="#">Prestamo</a></li>
     </ol>
     <div class="page-heading">            
-        <h1>&Oacute;rdenes de transferencia</h1>
+        <h1>&Oacute;rdenes de prestamo</h1>
         <div class="options">
             <div class="btn-toolbar">
                 <a href="#/app-nuevoPrestamo"  class="btn btn-default"><i class="fa fa-fw fa-plus"></i>Crear &oacute;rden</a>
