--- a/app/views/app-vistaTransInd.html
+++ b/app/views/app-vistaTransInd.html
@@ -16,8 +16,8 @@ hr{    border-top-color: #455A64}
 <div ng-controller="CtrlTransfInd">
   <ol class="breadcrumb">
       <li class=""><a href="#/">Home</a></li>
-      <li class=""><a href="#/">Orden</a></li>
-      <li class=""><a href="#">Transferencia</a></li>
+      <li class=""><a href="#">Orden</a></li>
+      <li class=""><a href="#/app-vistaTransferencias">Transferencia</a></li>
       <li class="active"><a href="#">{{TransInd.number}}</a></li>
   </ol>
   <div class="page-heading">
