--- a/app/views/app-vistaAlmacen.html
+++ b/app/views/app-vistaAlmacen.html
@@ -1,7 +1,7 @@
 <div ng-controller="CtrlAlmacen">
     <ol class="breadcrumb">
         <li class=""><a href="#/">Home</a></li>
-        <li class=""><a href="#">{{almacenes.location.name}}</a></li>
+        <li class=""><a href="#/app-vistaLocacion/{{almacenes.location.id}}">{{almacenes.location.name}}</a></li>
         <li class="active"><a href="#">Almacen {{almacenes.name}}</a></li>
     </ol>
 
