--- a/app/views/app-vistaMarcas.html
+++ b/app/views/app-vistaMarcas.html
@@ -1,16 +1,7 @@
-<style type="text/css">
-    table, th, td {
-    border: 1px solid black;
-    border-collapse: collapse;
-}
-th, td {
-    padding: 15px;
-}
-    </style>
 <div ng-controller="EditCtrl">
 	<ol class="breadcrumb">
 	    <li class=""><a href="#/">Home</a></li>
-	    <li class=""><a href="#/">Dashboard</a></li>
+	    <li class=""><a href="#/app-vistaProductos">Productos</a></li>
 	    <li class="active"><a href="#">Marcas</a></li>
 	</ol>
 	<div class="page-heading">
@@ -23,10 +14,7 @@ th, td {
 	</div>
 	<div class="tab-content">
 		<a href="#/app-nuevaMarca">Agregar Marca</a>
-	    <table>
-	        <col width="180">
-	        <col width="280"> 
-	        <col width="180">
+	    <table class="table table-hover">
 	        <thead>
 	            <tr>
 	              	<th>Marca</th> 
