--- a/app/views/app-vistaMarcasInd.html
+++ b/app/views/app-vistaMarcasInd.html
@@ -1,16 +1,8 @@
-<style type="text/css">
-    table, th, td {
-    border: 1px solid black;
-    border-collapse: collapse;
-}
-th, td {
-    padding: 15px;
-}
-    </style>
+
 <div ng-controller="VistaMarcaInd">
 	<ol class="breadcrumb">
 	    <li class=""><a href="#/">Home</a></li>
-	    <li class=""><a href="#/">Dashboard</a></li>
+        <li class=""><a href="#/app-vistaProductos">Productos</a></li>
 	    <li class=""><a href="#/app-vistaMarcas">Marcas</a></li>
 	    <li class="active"><a href="#">Marca {{marcas.nombre}}</a></li>
 	</ol>
@@ -23,10 +15,7 @@ th, td {
 		</div>
 	</div>
 	<div class="tab-content">
-    <table>
-        <col width="180">
-        <col width="280"> 
-        <col width="180">
+    <table class="table table-hover">
         <thead>
             <tr>
               	
