--- a/app/views/app-vistaOrdenVInd.html
+++ b/app/views/app-vistaOrdenVInd.html
@@ -16,9 +16,8 @@ hr{    border-top-color: #455A64}
 <div ng-controller="CtrlOrdenesVentaInd">
   <ol class="breadcrumb">
       <li class=""><a href="#/">Home</a></li>
-      <li class=""><a href="#/">Dashboard</a></li>
       <li class=""><a href="#/">Ordenes</a></li>
-      <li class=""><a href="#">Venta</a></li>
+      <li class=""><a href="#/app-vistaOrdenesVenta">Venta</a></li>
       <li class="active"><a href="#">{{ordenVenta.number}}</a></li>
   </ol>
   <div class="page-heading">
