--- a/app/views/app-vistaOrdenesCompra.html
+++ b/app/views/app-vistaOrdenesCompra.html
@@ -1,8 +1,7 @@
 <div ng-controller="CtrlOrdenesC">
     <ol class="breadcrumb">
-        <li class=""><a href="index.html">Home</a></li>
-        <li class=""><a href="#">Dashboard</a></li>
-        <li class="active"><a href="#">Ordenes</a></li>
+        <li class=""><a href="#/">Home</a></li>
+        <li class=""><a href="#">Ordenes</a></li>
         <li class="active"><a href="#">Compra</a></li>
     </ol>
     <div class="page-heading">            
