--- a/app/views/app-vistaListas.html
+++ b/app/views/app-vistaListas.html
@@ -7,8 +7,10 @@
     </div>
     <div class="row inMargin">
         <div class="row">
-            <div class="col-md-10">
-                <h1>Criterios de variable</h1>
+            <div class="col-md-5">
+                <h4>Criterios de variable</h4>
+            </div>
+            <div class="col-md-4" style="margin-top: 15px;">
                 <div class="options">
                     <div class="btn-toolbar">
                         <a href="#/app-nuevoCriterio" class="btn btn-default"><i class="fa fa-fw fa-plus"></i>Agregar criterio</a>
@@ -33,8 +35,6 @@
                     </tr>
                 </table>    
             </div>
-        
         </div>
-        
     </div>
 </div>
