--- a/app/views/app-editarDivisa.html
+++ b/app/views/app-editarDivisa.html
@@ -1,26 +1,20 @@
-<div ng-controller="EditCtrlDivisas">
+<div ng-controller="CtrlFacturacion">
   <ol class="breadcrumb">
     <li class=""><a href="#/">Home</a></li>
-    <li class=""><a href="#/">Dashboard</a></li>
-    <li class=""><a href="#/app-vistaDivisas">Divisas</a></li>
-    <li class="active"><a href="#">Edicion</a></li>
+    <li class=""><a href="#/app-vistaFacturacion">Facturacion</a></li>
+    <li class="active"><a href="#">Editar Divisa</a></li>
   </ol>
   <div class="page-heading">
-    <h1>Divisa {{currenciesProxy.name}}</h1>
-    <div class="options">
-        <div class="btn-toolbar">
-            <a href="#" class="btn btn-default"><i class="fa fa-fw fa-wrench"></i></a>
-        </div>
-    </div>
+    <h1>Divisa {{currenciesEd.name}}</h1>
   </div>
   <div class="tab-content">
-    <h1>Formulario para editar</h1>
-      <form name="personForm2"  ng-submit="editTest(currenciesProxy)">
-        <label for="lastNameEdit3">Divisa:</label>
-        <input id="lastNameEdit3" type="text" name="nombre" ng-model="currenciesProxy.shortcut" required /><br />
-        <label for="firstNameEdit3">Nombre:</label>
-        <input id="firstNameEdit3" type="text" name="desc" ng-model="currenciesProxy.name" required /><br />
-        
+      <form name="personForm2"  ng-submit="editDivisa()">
+        <label for="Divisa3">Divisa:</label>
+        <input id="Divisa3" type="text" name="nombre" ng-model="currenciesEd.shortcut" required /><br />
+        <label for="Nombre3">Nombre:</label>
+        <input id="Nombre3" type="text" name="desc" ng-model="currenciesEd.name" required /><br />
+        <label for="unit3">Cambio:</label>
+        <input id="unit3" type="number" name="desc" ng-model="currenciesEd.unit" required /><br />
         <br />
         <input type="submit" value="Save" class="btn btn-primary">
       </form>
