--- a/app/views/app-agregarProdLoc.html
+++ b/app/views/app-agregarProdLoc.html
@@ -1,9 +1,8 @@
 <div ng-controller="CtrlAddProdLoc">
     <ol class="breadcrumb">
-        <li class=""><a href="index.html">Home</a></li>
-        <li class=""><a href="#">Dashboard</a></li>
-        <li class=""><a href="#">Productos Global</a></li>
-        <li class="active"><a href="#">Agregar</a></li>
+        <li class=""><a href="#/">Home</a></li>
+        <li class=""><a href="">Productos Global</a></li>
+        <li class="active"><a href="">Agregar</a></li>
     </ol>
     <div class="page-heading">            
         <h1>Agregar variante a locacion</h1>
