--- a/app/views/app-editarMarcas.html
+++ b/app/views/app-editarMarcas.html
@@ -1,7 +1,7 @@
 <div ng-controller="EditCtrl">
   <ol class="breadcrumb">
     <li class=""><a href="#/">Home</a></li>
-    <li class=""><a href="#/">Dashboard</a></li>
+    <li class=""><a href="#/app-vistaProductos">Productos</a></li>
     <li class=""><a href="#/app-vistaMarcas">Marcas</a></li>
     <li class="active"><a href="#">Edicion</a></li>
   </ol>
@@ -14,7 +14,7 @@
     </div>
   </div>
   <div class="tab-content">
-    <h1>Formulario para editar</h1>
+    
       <form name="personForm2"  ng-submit="editTest(marcaUProxy)">
          
         <label for="firstNameEdit3">Nombre:</label>
