--- a/app/views/app-vistaFacturacion.html
+++ b/app/views/app-vistaFacturacion.html
@@ -33,7 +33,7 @@
 			        <tr ng-repeat="precio in prices" >
 			            <td>{{ precio.name }}</td>
 			            <td>{{ precio.description }}</td>
-			            <td>{{ precio.status }}</td>
+			            <td><span ng-show="precio.status=='A'">Archivado</span><span ng-show="precio.status=='D'">Disponible</span></td>
 			            <td><a href="#/app-editarPrecio/{{ precio.id }}">Editar</a></td>
 			            <td><a ng-click="removePrecio(precio.id)" ng-confirm-click="Are you sure?">Archivar</a></td>
 			        </tr>
@@ -62,6 +62,7 @@
 			              	<th>Divisa</th> 
 			              	<th>Nombre</th> 
 			              	<th>Cambio</th>
+			              	<th>Status</th>
 			              	<th></th> 
 			            </tr>
 			        </thead>
@@ -69,6 +70,7 @@
 			            <td>{{ divisa.shortcut }}</td>
 			            <td>{{ divisa.name }}</td>
 			            <td>{{ divisa.unit }}</td>
+			            <td><span ng-show="divisa.status=='A'">Archivado</span><span ng-show="divisa.status=='D'">Disponible</span></td>
 			            <td><a href="#/app-editarDivisa/{{ divisa.id }}">Editar</a></td>
 			            <td><a ng-click="removeDivisa(divisa.id)" ng-confirm-click="Are you sure?">Archivar</a></td>
 			        </tr>
@@ -103,7 +105,7 @@
 			        <tr ng-repeat="tax in taxes" >
 			            <td>{{ tax.name }}</td>
 			            <td>{{ tax.percentage }}</td>
-			            <td>{{ tax.status }}</td>
+			            <td><span ng-show="tax.status=='A'">Archivado</span><span ng-show="tax.status=='D'">Disponible</span></td>
 			            <td><a href="#/app-editarImpuesto/{{ tax.id }}">Editar</a></td>
 			            <td><a ng-click="removeTax(tax.id)" ng-confirm-click="Are you sure?">Archivar</a></td>
 			        </tr>
