--- a/app/views/app-vistaMarcas.html
+++ b/app/views/app-vistaMarcas.html
@@ -8,24 +8,24 @@
 		<h1>Marcas</h1>
 		<div class="options">
 	    	<div class="btn-toolbar">
-	        	<a href="#" class="btn btn-default"><i class="fa fa-fw fa-wrench"></i></a>
+	        	<a href="#/app-nuevaMarca" class="btn btn-default"><i class="fa fa-fw fa-plus"></i>Agregar Marca</a>
 	    	</div>
 		</div>
 	</div>
 	<div class="tab-content">
-		<a href="#/app-nuevaMarca">Agregar Marca</a>
+		<a href=""></a>
 	    <table class="table table-hover">
 	        <thead>
 	            <tr>
 	              	<th>Marca</th> 
-	              	<th></th> 
+	              	 
 	              	<th></th> 
 	            </tr>
 	        </thead>
 	        <tr ng-repeat="marcaP in marcasProxy.data" >
 	            <td>{{ marcaP.name }}</td>
-	            <td><a href="#/app-editarMarcas/{{ marcaP.id }}">Editar</a></td>
-	            <td><a ng-click="removeTest(marcaP.id)" ng-confirm-click="Are you sure?">Eliminar</a></td>
+	            <td><a href="#/app-editarMarcas/{{ marcaP.id }}">Editar</a>
+	            <a ng-click="removeTest(marcaP.id)" ng-confirm-click="Are you sure?">Eliminar</a></td>
 	        </tr>
 	    </table> 
 	</div>
