--- a/app/views/app-vistaProveedorInd.html
+++ b/app/views/app-vistaProveedorInd.html
@@ -26,11 +26,11 @@
             </tr>
         </thead>
         <tr>
-            <td>{{ proveedores.nombre }}</td>
-            <td>{{ proveedores.correo }}</td>
-            <td>{{ proveedores.divisa }}</td>
-            <td>{{ proveedores.pagina }}</td>
-            <td>{{ proveedores.telefono }}</td> 
+            <td>{{ suppUProxy.name }}</td>
+            <td>{{ suppUProxy.email }}</td>
+            <td>{{ suppUProxy.currency.name }}</td>
+            <td>{{ suppUProxy.website }}</td>
+            <td>{{ suppUProxy.phone }}</td> 
         </tr>
     </table> 
 </div>
