--- a/app/views/login.html
+++ b/app/views/login.html
@@ -1,5 +1,5 @@
 <div class="container" id="login-form" ng-controller="CtrlSigUp">
-  <a href="index.html" class="login-logo"><img masked-image src="assets/img/formacret-logo-prov.png"></a>
+  <a href="index.html" class="login-logo"><img masked-image style="width: 100%;max-width: 350px;" src="assets/img/logoformacret.png"></a>
     <div class="row">
       <div class="col-md-4 col-md-offset-4">
         <div class="panel panel-default">
